unpackaged/main/default/objects/Post_Venta__c/Post_Venta__c.object-meta.xml
<CustomObject>
    <label>Post Venta</label>
    <nameField>
        <label>NombreObjeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Ventas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>