unpackaged/main/default/objects/Post_Venta__c/fields/Approval_Object_LevelValue__c.field-meta.xml
<CustomField>
    <fullName>Approval_Object_LevelValue__c</fullName>
    <label>Fraccionamiento / UEN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>