unpackaged/main/default/objects/Post_Venta__c/fields/Cliente_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Nombre__c</fullName>
    <label>Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>