unpackaged/main/default/objects/Post_Venta__c/fields/Detalle__c.field-meta.xml
<CustomField>
    <fullName>Detalle__c</fullName>
    <label>Detalle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>