unpackaged/main/default/objects/Post_Venta__c/fields/Dias_de_Garantia__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_Garantia__c</fullName>
    <label>Días de Garantía</label>
    <length>10</length>
    <type>Text</type>
</CustomField>