unpackaged/main/default/objects/Post_Venta__c/fields/Diferencia__c.field-meta.xml
<CustomField>
    <fullName>Diferencia__c</fullName>
    <label>Diferencia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>