unpackaged/main/default/objects/Post_Venta__c/fields/Diferencia_Financiamiento_Monto__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Financiamiento_Monto__c</fullName>
    <formula>Financiamiento_PostVentaSolicitada_Monto__c -  FinanciamientoPostVentaAutorizadaMes_Mnt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>