unpackaged/main/default/objects/Post_Venta__c/fields/Diferencia_Financiamiento_Pct__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Financiamiento_Pct__c</fullName>
    <formula>Financiamiento_PostVenta_Solicitada_Pct__c -  FinanciamientoPostVentaAutorizadaMes_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>