unpackaged/main/default/objects/Post_Venta__c/fields/Escritura__c.field-meta.xml
<CustomField>
    <fullName>Escritura__c</fullName>
    <label>Escritura</label>
    <length>100</length>
    <type>Text</type>
</CustomField>