unpackaged/main/default/objects/Post_Venta__c/fields/Fecha_Inicio_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Cobranza__c</fullName>
    <label>Fecha Inicio Cobranza</label>
    <type>Date</type>
</CustomField>