unpackaged/main/default/objects/Post_Venta__c/fields/Financiamiento_PostVenta_Solicitada_Pct__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_PostVenta_Solicitada_Pct__c</fullName>
    <label>Financiamiento PostVenta Solicitada (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>