unpackaged/main/default/objects/Post_Venta__c/fields/Financiamiento_PostVentaSolicitada_Monto__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_PostVentaSolicitada_Monto__c</fullName>
    <label>Financiamiento PostVenta Solicitada ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>