unpackaged/main/default/objects/Post_Venta__c/fields/FinanciamientoPostVentaAutorizadaMes_Mnt__c.field-meta.xml
<CustomField>
    <fullName>FinanciamientoPostVentaAutorizadaMes_Mnt__c</fullName>
    <label>Financiamiento PostVenta Autorizada Mes$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>