unpackaged/main/default/objects/Post_Venta__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <label>Fraccionamiento</label>
    <length>200</length>
    <type>Text</type>
</CustomField>