unpackaged/main/default/objects/Post_Venta__c/fields/Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia__c</fullName>
    <label>Frecuencia</label>
    <length>200</length>
    <type>Text</type>
</CustomField>