unpackaged/main/default/objects/Post_Venta__c/fields/Monto_a_Condonar__c.field-meta.xml
<CustomField>
    <fullName>Monto_a_Condonar__c</fullName>
    <label>Monto a Condonar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>