unpackaged/main/default/objects/Post_Venta__c/fields/Monto_Reestructura__c.field-meta.xml
<CustomField>
    <fullName>Monto_Reestructura__c</fullName>
    <label>Monto Reestructura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>