unpackaged/main/default/objects/Post_Venta__c/fields/No_Cliente__c.field-meta.xml
<CustomField>
    <fullName>No_Cliente__c</fullName>
    <label>No Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>