unpackaged/main/default/objects/Post_Venta__c/fields/Numero_de_Garantia__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Garantia__c</fullName>
    <label>Numero de Garantía</label>
    <length>50</length>
    <type>Text</type>
</CustomField>