unpackaged/main/default/objects/Post_Venta__c/fields/Pct_a_Financiar__c.field-meta.xml
<CustomField>
    <fullName>Pct_a_Financiar__c</fullName>
    <label>% a Financiar</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>