unpackaged/main/default/objects/Post_Venta__c/fields/Pct_a_Reestructura__c.field-meta.xml
<CustomField>
    <fullName>Pct_a_Reestructura__c</fullName>
    <label>% a Reestructurar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>