unpackaged/main/default/objects/Post_Venta__c/fields/Plazo_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Autorizado__c</fullName>
    <label>Plazo Autorizado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>