unpackaged/main/default/objects/Post_Venta__c/fields/Subsidio__c.field-meta.xml
<CustomField>
    <fullName>Subsidio__c</fullName>
    <label>Subsidio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>