unpackaged/main/default/objects/Post_Venta__c/fields/Tiempo__c.field-meta.xml
<CustomField>
    <fullName>Tiempo__c</fullName>
    <label>Tiempo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>