unpackaged/main/default/objects/Post_Venta__c/fields/Tipo_de_Garantia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Garantia__c</fullName>
    <label>Tipo de Garantía</label>
    <length>100</length>
    <type>Text</type>
</CustomField>