unpackaged/main/default/objects/Post_Venta__c/fields/Valor_de_operacion__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_operacion__c</fullName>
    <label>Valor de operación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>