unpackaged/main/default/objects/Post_Venta__c/recordTypes/Autorizacion_Financiamiento_PosVenta.recordType-meta.xml
<RecordType>
    <fullName>Autorizacion_Financiamiento_PosVenta</fullName>
    <active>true</active>
    <description>Autorización Financiamiento PosVenta</description>
    <label>Autorizacion Financiamiento PosVenta</label>
</RecordType>