unpackaged/main/default/objects/Post_Venta__c/recordTypes/Bonificacion_Saldo_Post_Venta.recordType-meta.xml
<RecordType>
    <fullName>Bonificacion_Saldo_Post_Venta</fullName>
    <active>true</active>
    <description>Bonificación Saldo Post Venta</description>
    <label>Bonificacion Saldo Post Venta</label>
</RecordType>