unpackaged/main/default/objects/Post_Venta__c/recordTypes/Finan_PostVenta_Col_Javer.recordType-meta.xml
<RecordType>
    <fullName>Finan_PostVenta_Col_Javer</fullName>
    <active>true</active>
    <description>Para RT de Post Venta &quot;Finan PostVenta Col Javer&quot;</description>
    <label>Finan PostVenta Col Javer</label>
</RecordType>