unpackaged/main/default/objects/Post_Venta__c/recordTypes/Garantia.recordType-meta.xml
<RecordType>
    <fullName>Garantia</fullName>
    <active>true</active>
    <description>Para RT de Post Venta &quot;Garantia&quot;</description>
    <label>Garantia</label>
</RecordType>