unpackaged/main/default/objects/Post_Venta__c/recordTypes/Reestructuracion_Post_Venta.recordType-meta.xml
<RecordType>
    <fullName>Reestructuracion_Post_Venta</fullName>
    <active>true</active>
    <description>Reestructuración Post Venta</description>
    <label>Reestructuracion Post Venta</label>
</RecordType>