unpackaged/main/default/objects/Post_Venta__c/recordTypes/Subsidio.recordType-meta.xml
<RecordType>
    <fullName>Subsidio</fullName>
    <active>true</active>
    <description>Subsidio</description>
    <label>Subsidio</label>
</RecordType>