unpackaged/main/default/objects/Post_Venta__c/listViews/APC_Post_Venta.listView-meta.xml
<ListView>
    <fullName>APC_Post_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>APC</label>
    <queue>APC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>