unpackaged/main/default/objects/Post_Venta__c/listViews/Contralor_Post_Venta.listView-meta.xml
<ListView>
    <fullName>Contralor_Post_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>Contralor</label>
    <queue>Contralor</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>